--- a/index.html
+++ b/index.html
@@ -6,11 +6,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <section>
+        <div class="half-width">
+            <h1>Stay Focused on</h1>
+            <h2>Mission 2022</h2>
+            <p>My name is Anisur Rahman Anas.Few months ago i know about web developing. its looks pretty cool to me.In
+                that
+                time i started to focus on Web developing.</p>
+            <a class="link-button" href="https://web.programming-hero.com/">Research Now</a>
+            <p>Scroll down to explore more about us
+            </p>
+        </div>
+        <div class="half-width">
+            <img src="images/person/sunglass.png" alt="">
+        </div>
+    </section>
+    <section>
 
+    </section>
 </body>
 
 </html>
