--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
             <h1>Stay Focused on</h1>
             <h2>Mission 2022</h2>
             <p>My name is Anisur Rahman Anas.Few months ago i know about web developing. its looks pretty cool to me.In
-                that
-                time i started to focus on Web developing.</p>
+                that time i started to focus on Web developing.</p>
             <a class="link-button" href="https://web.programming-hero.com/">Research Now</a>
             <p>Scroll down to explore more about us
             </p>
@@ -28,9 +27,50 @@
             <img src="images/person/sunglass.png" alt="">
         </div>
     </section>
+    <section class="my experiences">
+        <h1>My Mission in 2022</h1>
+
+
+        <div class="flexiable-part">
+            <div class="half-expo">
+
+                <h1>Mission</h1>
+                <p>My mission is to be a Full Stack Web Developer.It is my final destiny.I am ready to do everying what
+                    will
+                    be needed. </p>
+            </div>
+            <div class="half-expo">
+
+                <h1>Vission</h1>
+                <p>As I've learned from working with my coaches, reflection is one of the most powerful tools for
+                    learning
+                    and moving forward. Reflection doesn't mean dwelling on mistakes or getting nostalgic about happy
+                    memories. Reflection is a set period of time we give ourselves to consider our experiences, the
+                    actions
+                    we took, the results, what we learned, and what we will do differently as a result. </p>
+            </div>
+            <div class="half-expo">
+
+                <h1>Goals</h1>
+                <p>Every day we have too many decisions to make. Each decision drains our energy. If your goals are not
+                    top-of-mind these decisions are more difficult. Preventing us from doing anything. If your goals are
+                    clear, decision fatigue is reduced and your choices become easier. Easier, not easy </p>
+            </div>
+        </div>
+    </section>
     <section>
+        <div class="half-width">
+            <img src="images/pictures/coding.png" alt="">
+            <div class="half-width">
+                <h1>Develop<h1>
+                        <h2>Without Limits</h2>
+                        <p>As a leader in the field, you may already be doing these things. If you’re not, try them. If
+                            you
+                            are, consider how you could share these steps with staff on your team. Help them grow their
+                            professional networks.</p>
 
     </section>
+
 </body>
 
 </html>
